@@ -1,9 +1,13 @@
+2019-04-29 Shahzad Muzaffar  <@smuzaffar>
+	V05-08-23: Fix fix-code-checks-yaml.py to keep the extra new line
+	for readability-braces-around-statements clang-tidy check
+
 2019-04-04 Shahzad Muzaffar  <@smuzaffar>
 	V05-08-16: Included changes from V05-08-21
 	Only include top level headers files in auto-generated classes.h
 
 2019-04-09 Shahzad Muzaffar  <@smuzaffar>
-	V05-08-21: Fix code-fomat rule and run it for all file with extnsion
+	V05-08-21,22: Fix code-fomat rule and run it for all file with extnsion
 	cpp, cc, cxx, h, hpp, hh
 
 2019-04-02 Shahzad Muzaffar  <@smuzaffar>
